# experiment-tracker

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_experiment.py
src/experiment-tracker/: dataset.py  decorator.py  model.py
src/experiment_tracker/: __init__.py  dataset.py  logger.py  model.py
tests/: conftest.py  test_dataset.py  test_decorator.py  test_logger.py  test_model.py
